...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

    <br.com.concrete.tentacle.custom.ListError
            android:id="@+id/recyclerListError"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListView"
            android:visibility="gone"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_game"
            app:layout_constraintTop_toTopOf="parent"
...
