...
    <string name="no_internet_connection">Parece que você está sem conexão com a internet</string>

    <string name="search">Pesquisar</string>

    <string name="add_new_game">Adicionar novo jogo</string>
    <string name="add_new_game_compact">+ Adicionar</string>
    <string name="no_game_registered">Você ainda não tem nenhum jogo cadastrado :(</string>
    <string name="load_games_error_not_know">Ocorreu um erro ao carregar os jogos. Por favor, tente novamente.</string>
    <string name="load_again">Carregar Novamente</string>

    <string name="game_name">Nome do Jogo</string>
    <string name="media">mídia</string>
    <string name="first_game_register">Parece que você é o primeiro a buscar esse jogo!</string>

    <string name="remote_game_not_found_description">Jogo não encontrado</string>
    <string name="remote_game_not_found_action_button">Retornar para pesquisa</string>

    <string name="register_media_group_title">Selecione a plataforma:</string>
    <string name="register_media_ps3_radio_button_title">Playstation 3</string>
...
    <string name="register_media_xbox360_radio_button_title">XBox 360</string>
    <string name="register_media_xboxone_radio_button_title">XBox One</string>
    <string name="register_media_3ds_radio_button_title">Nintendo 3DS</string>
    <string name="register_media_switch_radio_button_title">Nintendo Switch</string>
    <string name="register_media_button">Cadastrar</string>

    <string name="register_media_success_test">Jogo cadastrado com sucesso</string>
    <string name="register_media_generic_error_test">Ocorreu um erro</string>
    <string name="register_media_no_selection_error">Necessário escolher a plataforma do jogo</string>

    <string name="toolbar_title_home">Novos jogos</string>
    <string name="toolbar_title_my_games">Meus jogos</string>
    <string name="toolbar_title_search_game">Cadastrar jogo</string>
    <string name="toolbar_title_loan_game">Reservar jogo</string>
    <string name="toolbar_title_lend_game">Detalhes do jogo</string>
...
    </string>
    <string name="load_library_error_not_know">Ocorreu um erro ao carregar a bilioteca de jogos.\nPor favor, tente
        novamente.
    </string>

    <string name="bullet_ps3">PS3</string>
    <string name="bullet_ps4">PS4</string>
    <string name="bullet_360">360</string>
    <string name="bullet_ONE">ONE</string>
    <string name="bullet_3DS">3DS</string>
    <string name="bullet_NS">NS</string>

    <string name="chip_ps3">PS3</string>
...
    <string name="delete_dialog_message_reservation">A reserva do jogo %1$s sairá da lista de \"Minhas Reservas\", mas
        você poderá adicioná-lo
        novamente no futuro.
    </string>
    <string name="remove">Remover</string>
    <string name="update">Atualizar</string>
    <string name="reactivate">Reativar</string>
    <string name="reactivate_media">Reativar mídia</string>
    <string name="reactivate_media_dialog_message">O jogo %1$s será reativado e será exibido novamente na lista de \"Meus jogos\".</string>
</resources>

