<?xml version="1.0" encoding="utf-8"?>
<ProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBarList"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress"/>
