<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:lines="@integer/line_1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizePresetSizes="@array/auto_size_text_sizes"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progress"/>

</FrameLayout>
