...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.chip.ChipGroup>

            <br.com.concrete.tentacle.custom.StateButtonView
                    android:id="@+id/mediaRegisterButton"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    style="@style/StyleButton"
                    app:buttonName="@string/register_media_button"
                    android:layout_marginTop="@dimen/dp_24"
                    app:layout_constraintStart_toStartOf="parent"
...
